--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -41,7 +41,7 @@ temp <- c(35, 88, 42, 84, 81, 30)
 # Assign city names to `city` 
 
 
-# Create data frame `city_temps` 
+# Create a data frame `city_temps` 
 
 ```
 
@@ -181,3 +181,40 @@ test_object("murder_rate", incorrect_msg = "")
 test_function("mean", incorrect_msg = "")
 success_msg("Awesome!")
 ```
+
+---
+
+## End of Section 4
+
+```yaml
+type: PlainMultipleChoiceExercise
+lang: r
+xp: 0
+skills: 1
+key: c389117b79
+```
+This is the end of the programming assignment for this section. 
+
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+
+If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
+
+`@instructions`
+- Awesome
+- Nope
+
+`@hint`
+- No hint necessary!
+
+`@pre_exercise_code`
+```{r}
+# no pec
+```
+
+`@sct`
+```{r}
+msg1 = "Great! Now navigate back to the course on edX!"
+msg2 = "Now navigate back to the course on edX!"
+test_mc(correct = 1, feedback_msgs = c(msg1,msg2))
+```
+
