--- a/chapter7.Rmd
+++ b/chapter7.Rmd
@@ -449,3 +449,41 @@ test_error()
 test_object("my_states", undefined_msg = "Define my_states!", incorrect_msg = "Make sure you put pipes to put everything in one line.")
 success_msg("This is absolutely awesome! You now know how to use basic data manipulation techniques in R.")
 ```
+
+
+---
+
+## End of Section 7
+
+```yaml
+type: PlainMultipleChoiceExercise
+lang: r
+xp: 0
+skills: 1
+key: 54b0aa0655
+```
+This is the end of the programming assignment for this section. 
+
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+
+If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
+
+`@instructions`
+- Awesome
+- Nope
+
+`@hint`
+- No hint necessary!
+
+`@pre_exercise_code`
+```{r}
+# no pec
+```
+
+`@sct`
+```{r}
+msg1 = "Great! Now navigate back to the course on edX!"
+msg2 = "Now navigate back to the course on edX!"
+test_mc(correct = 1, feedback_msgs = c(msg1,msg2))
+```
+
