--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -259,7 +259,7 @@ test_mc(correct = 3, feedback_msgs = c(msg1,msg2,msg3,msg4))
 ```
 
 ---
-## End of Section 1
+## End of Assessment 1
 
 ```yaml
 type: PlainMultipleChoiceExercise
