--- a/chapter5.Rmd
+++ b/chapter5.Rmd
@@ -66,7 +66,7 @@ city_temps <- data.frame(name = city, temperature = temp)
 test_object("temp", undefined_msg = "Define temp first.", incorrect_msg = "Store values of temperature!")
 test_object("temp", incorrect_msg = "Change from Fahrenheit to Celsius using `temp <- (temp - 32)*5/9`.")
 test_object("city", incorrect_msg = "Store names of cities.")
-test_object("city_temps", incorrect_msg = "Create a dataframe following the same example.")
+test_object("city_temps", incorrect_msg = "Create a data frame following the same example.")
 test_error()
 success_msg("Great job!")
 ```
@@ -195,7 +195,7 @@ key: 9831da4a5f
 ```
 This is the end of the programming assignment for this section. 
 
-You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/2a638f36b59f4897b1bd6867ad58f63e/63b7518d4edc47518dbe29c1e5db8822/2?activate_block_id=block-v1%3AHarvardX%2BPH125.1x%2B2T2017%2Btype%40vertical%2Bblock%405d7cd083d32843e39f547864236f966b'>course</a>.
 
 If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
 
