--- a/chapter7.Rmd
+++ b/chapter7.Rmd
@@ -201,14 +201,14 @@ data(murders)
 library(dplyr)
 data(murders)
 
-# Use filter to create a new dataframe `no_south`
+# Use filter to create a new data frame `no_south`
 
 # Use nrow() to calculate the number of rows
 ```
 
 `@solution`
 ```{r}
-# Creating a new dataframe `no_south`
+# Creating a new data frame `no_south`
 no_south <- filter(murders, region != "South" )
 
 # Number of states (rows) in this category 
@@ -237,7 +237,7 @@ skills: 1
 
 
 `@instructions`
-Create a new dataframe called murders_nw with only the states from the northeast and the west. 
+Create a new data frame called murders_nw with only the states from the northeast and the west. 
 How many states are in this category? 
 
 
@@ -257,7 +257,7 @@ data(murders)
 library(dplyr)
 data(murders)
 
-# Create a new dataframe called `murders_nw` with only the states from the northeast and the west
+# Create a new data frame called `murders_nw` with only the states from the northeast and the west
 
 
 # Number of states (rows) in this category 
@@ -266,7 +266,7 @@ data(murders)
 
 `@solution`
 ```{r}
-# Create a new dataframe called `murders_nw` with only the states from the northeast and the west
+# Create a new data frame called `murders_nw` with only the states from the northeast and the west
 murders_nw <- filter(murders, region %in% c("Northeast", "West") )
 
 # Number of states (rows) in this category
@@ -464,7 +464,7 @@ key: 54b0aa0655
 ```
 This is the end of the programming assignment for this section. 
 
-You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/79c873ff79ea4680a67d98b169d2f2fc/8965ae6e5f6748c480a72e5389680cbd/3?activate_block_id=block-v1%3AHarvardX%2BPH125.1x%2B2T2017%2Btype%40vertical%2Bblock%409a5f32e780a5416b89619b0e8c6df2e9'>course</a>.
 
 If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
 
