--- a/chapter9.Rmd
+++ b/chapter9.Rmd
@@ -497,7 +497,7 @@ key: 226fb8de61
 ```
 This is the end of the programming assignment for this section. 
 
-You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/cfded5c208bc4e379606cb712cc54f25/5ba06674d0be41b99185b947e09e889b/?child=first'>course</a>.
+You can now close this window to go back to the <a href='https://courses.edx.org/courses/course-v1:HarvardX+PH125.1x+2T2017/courseware/6fd90a49a11d4ee3b94008b52f211653/f98acb1531854811b4c13907e7e55980/3?activate_block_id=block-v1%3AHarvardX%2BPH125.1x%2B2T2017%2Btype%40vertical%2Bblock%4080c3a1cbb4d64335bf1eb678472f122c'>course</a>.
 
 If you want to continue the assessments without watching the videos, you can click on the arrow above to get the next exercise or hit Ctrl-K.
 
