--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -147,6 +147,7 @@ Based on the result, what do you think the functions `seq` and `sum` do? You can
 
 `@hint`
 Go to R console and type `seq(1,5)`. See what you get. Then got the R console again and type `sum(seq(1,5))`. Change the `5` to other numbers.
+You can also type `?` before a function to get help.
 
 `@pre_exercise_code`
 ```{r}
@@ -157,7 +158,7 @@ Go to R console and type `seq(1,5)`. See what you get. Then got the R console ag
 ```{r}
 msg1 = "Try again! Read the choices carefully. Try again."
 msg2 = "Well done. Proceed to the next exercise."
-msg3 = "There`s no specification of 1 to 1000 for sum. Try again."
+msg3 = "There's no specification of 1 to 1000 for sum. Try again."
 msg4 = "Read the help file for sum by typing `?sum` in the R console."
 test_mc(correct = 2, feedback_msgs = c(msg1,msg2,msg3,msg4))
 ```
@@ -217,8 +218,8 @@ log10(sqrt(100))
 
 `@sct`
 ```{r}
-test_output_contains (c("log10(sqrt(100))", "log(sqrt(100), base=10)"), times = 1, incorrect_msg = "Make sure you use the right base for the log and put the sqrt function in parenthesis.")
 test_error() 
+test_student_typed (c("log10(sqrt(100))", "log(sqrt(100), base=10)"), times = 1, not_typed_msg = "Make sure you use the right base for the log and put the sqrt function in parenthesis.")
 success_msg("Very good!")
 ```
 
