--- a/chapter3.Rmd
+++ b/chapter3.Rmd
@@ -109,7 +109,7 @@ city <- c("Beijing", "Lagos", "Paris", "Rio de Janeiro", "San Juan", "Toronto")
 `@sct`
 ```{r}
 test_error()
-test_object("city", incorrect_msg = "Each of the city names need double quotes.")
+test_object("city", incorrect_msg = "Make sure to use the correct order.",undefined_msg = "Each of the city names need double quotes.")
 success_msg("Awesome! Now you've learnt to store both numeric and character vectors.")
 
 ```
@@ -713,10 +713,11 @@ as.integer(x)
 test_error()
 test_object("x", undefined_msg = "Make sure to define x first.", incorrect_msg = "Check the values stored in `x`.")
 test_output_contains("as.integer(x)", incorrect_msg = "Check the code again.")
+test_function("as.integer")
 success_msg("Awesome! Doesn't that feel wonderful? Now, you can try changing it back to character, using the code `as.character(x)`.")
-
-
 ```
+
+---
 ## End of Assessment 3
 
 ```yaml
